[project]
name = "comfyui-fb-utils"
description = "Nodes:FBStringJoin, FBStringSplit, FBMultilineStringList, FBMultilineString, FBCustomFunction"
version = "0.0.1"

[project.urls]
Repository = "https://github.com/FredBill1/comfyui-fb-utils"

[tool.comfy]
PublisherId = "fredbill"
DisplayName = "comfyui-fb-utils"
Icon = ""
